--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1267,6 +1267,19 @@ section,
   color: var(--accent-color);
 }
 
+.video-wrap {
+  z-index: -100;
+}
+
+.custom-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
